<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="label_youtube_playlists">YouTube Playlists</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="label_sing_in">To download musics from your YouTube playlist, you need to sign in with Google</string>
    <string name="label_select">Select</string>
    <string name="label_empty_playlist">This playlist does not have any videos. Please add first video to the playlist</string>
    <string name="label_first_playlist">Great job! Now you should select your first playlist to download musics from videos</string>
    <string name="select_playlist">Select playList</string>
    <string name="content_description_thumbnail_video">Thumbnail of video item</string>
    <string name="content_description_likes">Likes</string>
    <string name="label_fragment_title_youtube_musics">YouTube Music</string>
    <string name="dialog_confirm_deletion_music_title">Delete music</string>
    <string name="dialog_confirm_deletion_music_message">Are you sure want to delete this music?</string>
    <string name="label_views_count">%s views</string>
    <string name="label_log_out">Logout</string>
    <string name="label_search">Search</string>
    <string name="label_publick">public</string>
    <string name="label_unlisted">unlisted</string>
    <string name="label_private">private</string>
    <string name="label_download_all">Download All</string>
    <string name="label_order_by">Order by</string>
    <string name="label_duration">Duration</string>
    <string name="label_upload_date">Upload\ndate</string>
    <string name="label_features">Features</string>
    <string name="label_syndicated">Syndicated</string>
    <string name="label_embeddable">Embeddable</string>
    <string name="label_episode">Episode</string>
    <string name="label_movie">Movie</string>
    <string name="label_search_filter">Search filter</string>
    <string name="label_no_results_found">No results found</string>
    <string name="label_no_results_hint">Try different keywords or remove search filters</string>
</resources>