<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/item_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/label_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/item_log_out"
        android:title="@string/label_log_out" />
    <item
        android:id="@+id/item_open_download_manager"
        android:icon="@drawable/ic_baseline_download_24"
        android:title="@string/label_download_manager"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/item_open_playlists"
        android:icon="@drawable/baseline_video_library_24"
        android:title="@string/label_youtube_playlists"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
</menu>